Updates, fixes, translations, and configuration changes

--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -21,4 +21,8 @@
             <certificates src="system"/>
         </trust-anchors>
     </domain-config>
+
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="false">4.182.232.165</domain>
+    </domain-config>
 </network-security-config>
